writing a draft code for GeneralServiceTest